--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -1,6 +1,11 @@
 @import "../breakpoints.less";
 @import "../images.less";
 @import "../../common/space.less";
+@import "../nav.less";
+
+#nav-link-thundermail {
+    .mixin-active-nav-link();
+}
 
 header#masthead {
     align-items: center;
@@ -15,7 +20,7 @@ header#masthead {
 
     h1 {
         white-space: wrap;
-        max-width: 80%;
+        // max-width: 80%;
     }
 
     p {
