--- a/assets/less/tbpro/images.less
+++ b/assets/less/tbpro/images.less
@@ -1,17 +1,26 @@
 // mixins
+
+
+// Assumes you have regular and high-res versions of the image.
 .mixin-background-image(@base-path) {
-    // Fallback for older browsers.
+    // Regular DPI fallback
     background-image: url('@{base-path}.png');
 
-    // For browsers that support modern formats.
+    // Regular DPI modern formats
     background-image: -webkit-image-set(
-        url('@{base-path}.avif') type('image/avif'),
-        url('@{base-path}.webp') type('image/webp'),
-        url('@{base-path}.png')
+        url('@{base-path}.avif') type('image/avif') 1x,
+        url('@{base-path}.webp') type('image/webp') 1x,
+        url('@{base-path}.png') 1x,
+        url('@{base-path}-high-res.avif') type('image/avif') 2x,
+        url('@{base-path}-high-res.webp') type('image/webp') 2x,
+        url('@{base-path}-high-res.png') 2x
     );
     background-image: image-set(
-        url('@{base-path}.avif') type('image/avif'),
-        url('@{base-path}.webp') type('image/webp'),
-        url('@{base-path}.png')
+        url('@{base-path}.avif') type('image/avif') 1x,
+        url('@{base-path}.webp') type('image/webp') 1x,
+        url('@{base-path}.png') 1x,
+        url('@{base-path}-high-res.avif') type('image/avif') 2x,
+        url('@{base-path}-high-res.webp') type('image/webp') 2x,
+        url('@{base-path}-high-res.png') 2x
     );
 }
