Use 'Custom Domains' in Pro offering (#968)

--- a/sites/tb.pro/includes/macros/subscription-plan.html
+++ b/sites/tb.pro/includes/macros/subscription-plan.html
@@ -27,12 +27,12 @@
     </li>
     <li>
       <p>
-        <span class="info-number">{{ num_domains }}</span> <span class="info-desc">Domains</span>
+        <span class="info-number">{{ num_email_addresses }}</span> <span class="info-desc">Email Addresses</span>
       </p>
     </li>
     <li>
       <p>
-        <span class="info-number">{{ num_email_addresses }}</span> <span class="info-desc">Email Addresses</span>
+        <span class="info-number">{{ num_domains }}</span> <span class="info-desc">Custom Domains</span>
       </p>
     </li>
   </ul>
