--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="{{ _('Thunderbird') }}">
     <meta property="og:locale" content="{{ LANG|replace("-", "_") }}">
-    <meta property="og:url" content="{{ settings.CANONICAL_URL }}{{ request.path if request else '/' }}">
+    <meta property="og:url" content="{{ settings.CANONICAL_URL + '/' + LANG + canonical_path }}">
     <meta property="og:image" content="{{ settings.CANONICAL_URL }}{{ static('img/thunderbird/thunderbird-256.png') }}">
     <meta property="og:image:width" content="256">
     <meta property="og:image:height" content="256">
