--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -103,17 +103,19 @@ section#overview {
 
             .overview-image {
                 .mixin-background-image('/media/img/tbpro/xs-appointment-bento-top');
-                aspect-ratio: 2.6/1;
+                aspect-ratio: 1.97/1;
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
 
                 margin-bottom: 1.5rem;
                 margin-top: 1rem;
+                margin-left: 1.25rem;
                 @media (min-width: @lg) {
                     .mixin-background-image('/media/img/tbpro/xl-appointment-bento-left');
-                    aspect-ratio: 2.3/1;
+                    aspect-ratio: 2.09/1;
                     grid-row: 2;
+                    margin-left: 2rem;
                 }
             }
         }
