--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -62,7 +62,9 @@ header#masthead {
 
         width: 100%;
         .mixin-background-image('/media/img/tbpro/xs-appointment-hero');
-        @media (min-width: @md) {
+
+        @media (min-width: @lg) {
+            aspect-ratio: 3.6/1;
             .mixin-background-image('/media/img/tbpro/xl-appointment-hero');
         }
     }
