--- a/assets/less/tbpro/product/send.less
+++ b/assets/less/tbpro/product/send.less
@@ -84,8 +84,9 @@ section#overview {
 
             @media (min-width: @lg) {
                 display: grid;
-                grid-template-columns: 1fr;
+                grid-template-columns: minmax(0, 1fr);
                 gap: 0.5rem;
+                padding-bottom: 1rem;
 
                 header {
                     align-self: end;
@@ -111,10 +112,13 @@ section#overview {
                 margin-bottom: 1.5rem;
                 margin-top: 1rem;
                 max-width: 80%;
+                min-width: 0;
                 @media (min-width: @lg) {
                     .mixin-background-image('/media/img/tbpro/xl-send-bento-left-main');
                     grid-row: 2;
-                    max-width: 517px;
+                    margin-inline: 2rem;
+                    max-width: calc(100% - 4rem);
+                    width: calc(100% - 4rem);
                 }
             }
         }
@@ -125,9 +129,10 @@ section#overview {
             @media (min-width: @lg) {
                 display: grid;
                 gap: 0.5rem;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 3fr 4fr;
-                padding-inline: 0.75rem;
+                grid-template-columns: 50% 50%;
+                grid-template-rows: 1fr 2fr;
+                overflow: hidden;
+                // padding-inline: 0.75rem;
 
                 header {
                     align-self: end;
@@ -151,21 +156,18 @@ section#overview {
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
-                margin: 0 auto;
-                margin-top: 1.5rem;
+                justify-self: center;
+                margin-top: 1.25rem;
                 max-width: 80%;
-                overflow: hidden;
 
                 @media (min-width: @lg) {
                     .mixin-background-image('/media/img/tbpro/xl-send-bento-right-top');
+                    align-self: center;
                     aspect-ratio: 1.8/1;
-                    grid-column: 2;
                     grid-row: 1 / -1;
-                    height: 100%;
-                    justify-self: end;
-                    margin-left: 18px;
-                    margin-top: 0;
+                    margin-top: unset;
                     max-width: unset;
+
                 }
             }
         }
@@ -210,10 +212,11 @@ section#overview {
                 @media (min-width: @lg) {
                     .mixin-background-image('/media/img/tbpro/xl-send-bento-right-bottom');                    height: 100%;
                     background-position: center right;
-                    margin-bottom: unset;
+                    margin: auto;
                     margin-right: 0;
                     grid-column: 2;
                     grid-row: 1 / -1;
+
                 }
             }
         }
