--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -51,9 +51,9 @@ header#masthead {
         background-size: cover;
         height: 80px;
 
-        .mixin-background-image('/media/img/tbpro/xs-thundermail-logo-high-res');
+        .mixin-background-image('/media/img/tbpro/xs-thundermail-logo');
         @media (min-width: @md) {
-            .mixin-background-image('/media/img/tbpro/xl-thundermail-logo-high-res');
+            .mixin-background-image('/media/img/tbpro/xl-thundermail-logo');
         }
     }
 
@@ -61,9 +61,11 @@ header#masthead {
         aspect-ratio: 1.9/1;
 
         width: 100%;
-        .mixin-background-image('/media/img/tbpro/xs-appointment-hero-high-res');
-        @media (min-width: @md) {
-            .mixin-background-image('/media/img/tbpro/xl-appointment-hero-high-res');
+        .mixin-background-image('/media/img/tbpro/xs-appointment-hero');
+
+        @media (min-width: @lg) {
+            aspect-ratio: 3.6/1;
+            .mixin-background-image('/media/img/tbpro/xl-appointment-hero');
         }
     }
 }
@@ -102,18 +104,20 @@ section#overview {
 
 
             .overview-image {
-                .mixin-background-image('/media/img/tbpro/xs-bento-standards-high-res');
-                aspect-ratio: 2.6/1;
+                .mixin-background-image('/media/img/tbpro/xs-appointment-bento-top');
+                aspect-ratio: 1.97/1;
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
 
                 margin-bottom: 1.5rem;
                 margin-top: 1rem;
+                margin-left: 1.25rem;
                 @media (min-width: @lg) {
-                    .mixin-background-image('/media/img/tbpro/xl-bento-standards-high-res');
-                    aspect-ratio: 2.3/1;
+                    .mixin-background-image('/media/img/tbpro/xl-appointment-bento-left');
+                    aspect-ratio: 2.09/1;
                     grid-row: 2;
+                    margin-left: 2rem;
                 }
             }
         }
@@ -125,8 +129,8 @@ section#overview {
                 display: grid;
                 gap: 0.5rem;
                 grid-template-columns: 1fr 1fr;
-                grid-template-rows: 3fr 4fr;
-                padding-inline: 0.75rem;
+                grid-template-rows: 1fr 2fr;
+                overflow: hidden;
 
                 header {
                     align-self: end;
@@ -138,7 +142,6 @@ section#overview {
                 p {
                     grid-column: 1;
                     grid-row: 2;
-                    // min-width: 331px;
                     padding: 0;
                     padding-bottom: 2rem;
                     padding-left: 2rem;
@@ -146,23 +149,23 @@ section#overview {
             }
 
             .overview-image {
-                .mixin-background-image('/media/img/tbpro/xs-bento-hosted-high-res');
-                aspect-ratio: 1.2/1;
+                .mixin-background-image('/media/img/tbpro/xs-appointment-bento-bottom');
+                aspect-ratio: 1.67/1;
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
                 margin: 0 auto;
+                margin-right: 0;
                 margin-top: 1.5rem;
-                max-width: 180px;
+                max-width: 85%;
 
                 @media (min-width: @lg) {
-                    grid-column: 2;
+                    .mixin-background-image('/media/img/tbpro/xl-appointment-bento-top-right');
+                    aspect-ratio: unset;
                     grid-row: 1 / -1;
-                    height: 100%;
-                    justify-self: start;
-                    margin-left: 18px;
-                    margin-top: 0;
-                    max-width: 160px;
+                    justify-self: end;
+                    margin-top: unset;
+                    max-width: unset;
                 }
             }
         }
