Replace product logos

--- a/assets/less/tbpro/images.less
+++ b/assets/less/tbpro/images.less
@@ -24,3 +24,11 @@
         url('@{base-path}-high-res.png') 2x
     );
 }
+
+
+.mixin-background-svg(@path) {
+    background-image: url(@path);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+}
