--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -54,9 +54,10 @@ header#masthead {
         aspect-ratio: 1.9/1;
 
         width: 100%;
-        .mixin-background-image('/media/img/tbpro/xs-thundermail-card');
-        @media (min-width: @md) {
-            .mixin-background-image('/media/img/tbpro/xl-thundermail-card');
+        .mixin-background-image('/media/img/tbpro/xs-thundermail-hero');
+        @media (min-width: @lg) {
+            .mixin-background-image('/media/img/tbpro/xl-thundermail-hero');
+            aspect-ratio: 3.57/1;
         }
     }
 }
