--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -57,8 +57,9 @@ header#masthead {
         .mixin-background-image('/media/img/tbpro/xs-appointment-hero');
 
         @media (min-width: @lg) {
-            aspect-ratio: 3.6/1;
             .mixin-background-image('/media/img/tbpro/xl-appointment-hero');
+            aspect-ratio: 3.6/1;
+            max-width: 970px;
         }
     }
 }
