--- a/assets/less/tbpro/product/send.less
+++ b/assets/less/tbpro/product/send.less
@@ -58,6 +58,7 @@ header#masthead {
         .mixin-background-image('/media/img/tbpro/xs-send-hero-graphic');
         @media (min-width: @lg) {
             .mixin-background-image('/media/img/tbpro/xl-send-hero-graphic');
+            max-width: 970px;
         }
     }
 }
