--- a/assets/less/tbpro/product/send.less
+++ b/assets/less/tbpro/product/send.less
@@ -45,16 +45,9 @@ header#masthead {
     }
 
     .product-logo {
-        aspect-ratio: 16/9;
-        background-position: top center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        .mixin-background-svg('/media/svg/tbpro/logo-send-full.svg');
+        aspect-ratio: 3.2/1;
         height: 80px;
-
-        .mixin-background-image('/media/img/tbpro/xs-thundermail-logo');
-        @media (min-width: @md) {
-            .mixin-background-image('/media/img/tbpro/xl-thundermail-logo');
-        }
     }
 
     .hero-image {
@@ -65,6 +58,7 @@ header#masthead {
         .mixin-background-image('/media/img/tbpro/xs-send-hero-graphic');
         @media (min-width: @lg) {
             .mixin-background-image('/media/img/tbpro/xl-send-hero-graphic');
+            max-width: 970px;
         }
     }
 }
@@ -79,7 +73,7 @@ section#overview {
         }
 
         .overview-card-1 {
-            background-image: url('/media/img/tbpro/thundermail-bento-main.png');
+            background-image: url('/media/img/tbpro/send-bento-main.png');
             overflow: hidden;
 
             @media (min-width: @lg) {
@@ -124,7 +118,7 @@ section#overview {
         }
 
         .overview-card-2 {
-            background-image: url('/media/img/tbpro/thundermail-bento-right-top.png');
+            background-image: url('/media/img/tbpro/send-bento-right-top.png');
 
             @media (min-width: @lg) {
                 display: grid;
@@ -172,7 +166,7 @@ section#overview {
             }
         }
         .overview-card-3 {
-            background-image: url('/media/img/tbpro/thundermail-bento-right-bottom.png');
+            background-image: url('/media/img/tbpro/send-bento-right-bottom.png');
             padding-bottom: 0;
             overflow: hidden;
 
